--- a/css/index.css
+++ b/css/index.css
@@ -152,6 +152,10 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  z-index: -99;
+}
+
 @-webkit-keyframes cloudLoop {
   0% {
     transform: translate3d(-100%, 0, 0);
@@ -566,6 +570,7 @@ main #skill .skill-bg .skill-info::after {
   }
 }
 main #skill .skill-bg .skill-info .info-box {
+  position: relative;
   width: 100%;
   height: 180px;
   padding: 24px;
@@ -596,7 +601,7 @@ main #skill .skill-bg .skill-info .info-box .flexbox .icon-box {
   height: 132px;
   margin-right: 24px;
   padding: 4px 0;
-  line-height: 1;
+  z-index: 0;
 }
 main #skill .skill-bg .skill-info .info-box .flexbox .icon-box .img-box {
   width: 80px;
@@ -617,6 +622,17 @@ main #skill .skill-bg .skill-info .info-box .flexbox .skill-des {
   padding: 4px 0;
   text-align: left;
   font-size: 16px;
+}
+main #skill .skill-bg .skill-info .info-box .flexbox .skill-des .percentage {
+  top: 50%;
+  left: 50%;
+  font-size: 60px;
+  font-weight: 800;
+  color: rgb(221, 239, 196);
+  background-color: #0065f4;
+}
+main #skill .skill-bg .skill-info .info-box .flexbox .skill-des:div:last-child {
+  position: relative;
 }
 @media screen and (min-width: 768px) {
   main #skill .skill-bg .skill-info .info-box1,
@@ -647,78 +663,94 @@ main #skill .skill-circle .circle:hover {
   -webkit-animation-play-state: paused;
           animation-play-state: paused;
 }
-main #skill .skill-circle .cir-html {
-  top: -920px;
-  left: 0px;
-  background-color: #f16529;
-  -webkit-animation: trackPath 20s linear infinite;
-          animation: trackPath 20s linear infinite;
-  offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
-}
-main #skill .skill-circle .cir-css {
-  top: -920px;
-  left: -30px;
-  background-color: #0065f4;
-  -webkit-animation: trackPath 20s 500ms linear infinite;
-          animation: trackPath 20s 500ms linear infinite;
-  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
-}
-main #skill .skill-circle .cir-sass {
-  top: -920px;
-  left: -40px;
-  background-color: #cc6699;
-  -webkit-animation: trackPath 20s 1000ms linear infinite;
-          animation: trackPath 20s 1000ms linear infinite;
-  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
-}
 main #skill .skill-circle .cir-bootstrap {
   top: -920px;
   left: 0;
   background-color: #7952b3;
-  -webkit-animation: trackPath 20s 1500ms linear infinite;
-          animation: trackPath 20s 1500ms linear infinite;
+  -webkit-animation: trackPath 20s linear infinite;
+          animation: trackPath 20s linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
-}
-main #skill .skill-circle .cir-javascript {
-  top: -880px;
-  left: -30px;
-  color: #666;
-  background-color: #ffdf00;
-  -webkit-animation: trackPath 20s 500ms linear infinite;
-          animation: trackPath 20s 500ms linear infinite;
-  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
-}
-main #skill .skill-circle .cir-jquery {
-  top: -940px;
-  left: 0;
-  background-color: #0868ac;
-  -webkit-animation: trackPath 20s 2500ms linear infinite;
-          animation: trackPath 20s 2500ms linear infinite;
-  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
-}
-main #skill .skill-circle .cir-react {
-  top: -860px;
-  left: 0;
-  background-color: #6ecff1;
-  -webkit-animation: trackPath 20s 3000ms linear infinite;
-          animation: trackPath 20s 3000ms linear infinite;
-  offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-photoshop {
   top: -940px;
   left: 0;
   background-color: #31a8ff;
-  -webkit-animation: trackPath 20s 3500ms linear infinite;
-          animation: trackPath 20s 3500ms linear infinite;
+  -webkit-animation: trackPath 20s 500ms linear infinite;
+          animation: trackPath 20s 500ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-illust {
   top: -900px;
   left: -40px;
   background-color: #ff9a00;
+  -webkit-animation: trackPath 20s 1000ms linear infinite;
+          animation: trackPath 20s 1000ms linear infinite;
+  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
+}
+main #skill .skill-circle .cir-nodejs {
+  top: -940px;
+  left: 0;
+  background-color: #3f873f;
+  -webkit-animation: trackPath 20s 1500ms linear infinite;
+          animation: trackPath 20s 1500ms linear infinite;
+  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
+}
+main #skill .skill-circle .cir-git {
+  top: -900px;
+  left: 10px;
+  background-color: #ee2330;
+  -webkit-animation: trackPath 20s 2000ms linear infinite;
+          animation: trackPath 20s 2000ms linear infinite;
+  offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
+}
+main #skill .skill-circle .cir-react {
+  top: -880px;
+  left: 0;
+  background-color: #6ecff1;
+  -webkit-animation: trackPath 20s 2500ms linear infinite;
+          animation: trackPath 20s 2500ms linear infinite;
+  offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
+}
+main #skill .skill-circle .cir-html {
+  top: -920px;
+  left: 0px;
+  background-color: #f16529;
+  -webkit-animation: trackPath 20s linear 3000ms infinite;
+          animation: trackPath 20s linear 3000ms infinite;
+  offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
+}
+main #skill .skill-circle .cir-css {
+  top: -920px;
+  left: -30px;
+  background-color: #0065f4;
+  -webkit-animation: trackPath 20s 3500ms linear infinite;
+          animation: trackPath 20s 3500ms linear infinite;
+  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
+}
+main #skill .skill-circle .cir-sass {
+  top: -920px;
+  left: -40px;
+  background-color: #cc6699;
   -webkit-animation: trackPath 20s 4000ms linear infinite;
           animation: trackPath 20s 4000ms linear infinite;
   offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
+}
+main #skill .skill-circle .cir-jquery {
+  top: -940px;
+  left: 0;
+  background-color: #0868ac;
+  -webkit-animation: trackPath 20s 4500ms linear infinite;
+          animation: trackPath 20s 4500ms linear infinite;
+  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
+}
+main #skill .skill-circle .cir-javascript {
+  top: -880px;
+  left: -30px;
+  color: #666;
+  background-color: #ffdf00;
+  -webkit-animation: trackPath 20s 5000ms linear infinite;
+          animation: trackPath 20s 5000ms linear infinite;
+  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #portfolio {
   text-align: center;
